--- a/css/resume-styles.css
+++ b/css/resume-styles.css
@@ -99,12 +99,12 @@
 }
 
 .resume-left {
-  padding: 30px 20px 30px 40px;
+  padding: 20px 20px 30px 40px;
   overflow: visible;
 }
 
 .resume-right {
-  padding: 30px 40px 30px 20px;
+  padding: 20px 40px 30px 20px;
   overflow: visible;
 }
 
